CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.6.3-dev

build loop
======================

JMX
----------------------
* Added the ability to retrieve commit messages for a project's "current" modification set.
* Added the ability to retrieve build output (e.g. from Ant) from the most recent, or active, build.
* Added the ability to retrieve statuses of all projects.  

CruiseControl Release Notes - 2.6.2

documentation
======================

configxml.html
----------------------
* Added "veto" sourcecontrol to modificationset overview documentation (main/docs/configxml.html#modificationset). Patch by Allan Wick.
* Added "composite" builder to schedule overview documentation (main/docs/configxml.html#schedule). Pointed out by Kevin Quigley.
* Clarified documentation and fixed a typo for MKSBootstrapper (CC-584). Patch by Markus M. May.

build loop
======================

ConcurrentVersionsSystem
----------------------
* Added new attribute named "reallyQuiet" which will result in a "-Q" getting passed to cvs for the log command, instead of the default "-q". (CC-607) Suggested by Chris Nappin and Gisbert Amm.

CruiseControlConfig
----------------------
* Added the ability to use "global" properties in include.projects elements, e.g. <property environment="env" toupper="true" /> <include.projects file="config_${env.HOSTNAME}.xml" />. Patch by Andreas Mettlen.

CompositeBuilder
----------------------
* Fix validation error due to multiple calls to builder.validate() (CC-620). Reported by Tim Morrow

Darcs Source Control
----------------------
* New source control plugin for Darcs scm (CC-626). Contributed by Kim Pepper.  

EmailPublisher
----------------------
* Validate that email addresses are legal (CC-601). Patch by Jerome Lacoste. 

HtmlEmailPublisher
----------------------
* Expanded automatic search path for xsl and css files to work better with binary distribution (CC-566). Patch by Michael Kloss. 